# router/routes.go
@@ -19,11 +19,11 @@ func initializeRoutes(router *gin.Engine) {
 
 	v1 := router.Group(basePath)
 	{
-		v1.GET("/opening", handler.ShowOpeningHandler)
-		v1.POST("/opening", handler.CreateOpeningHandler)
-		v1.DELETE("/opening", handler.DeleteOpeningHandler)
-		v1.PUT("/opening", handler.UpdateOpeningHandler)
 		v1.GET("/openings", handler.ListOpeningsHandler)
+		v1.GET("/openings/:id", handler.ShowOpeningHandler)
+		v1.POST("/openings", handler.CreateOpeningHandler)
+		v1.PUT("/openings/:id", handler.UpdateOpeningHandler)
+		v1.DELETE("/openings/:id", handler.DeleteOpeningHandler)
 	}
 
 	// Initialize Swagger
